# Laweb-UI

./: README.md  docker-compose.yml
backend/laweb/: .pre-commit-config.yaml  main.py  pyproject.toml
config/: .env.example
